--- a/.htaccess
+++ b/.htaccess
@@ -58,12 +58,12 @@ DirectoryIndex index.php
   #
   # If you want the site to be accessed WITH the www. only, adapt and
   # uncomment the following:
-  # RewriteCond %{HTTP_HOST} !^www\.example\.com$ [NC]
+  # RewriteCond %{HTTP_HOST} ^example\.com$ [NC]
   # RewriteRule .* http://www.example.com/ [L,R=301]
   #
   # If you want the site to be accessed only WITHOUT the www. prefix, adapt
   # and uncomment the following:
-  # RewriteCond %{HTTP_HOST} !^example\.com$ [NC]
+  # RewriteCond %{HTTP_HOST} ^www\.example\.com$ [NC]
   # RewriteRule .* http://example.com/ [L,R=301]
 
   # Modify the RewriteBase if you are using Drupal in a subdirectory and
