--- a/.htaccess
+++ b/.htaccess
@@ -4,8 +4,7 @@
 
 # Protect files and directories from prying eyes.
 <FilesMatch "(\.(engine|inc|info|install|module|profile|sh|.*sql|theme|tpl(\.php)?|xtmpl)|code-style\.pl|Entries.*|Repository|Root)$">
-  Order deny,allow
-  Deny from all
+  Order allow,deny
 </FilesMatch>
 
 # Don't show directory listings for URLs which map to a directory.
