- Patch #104506 by m3vrick: better cache headers for static files.

--- a/.htaccess
+++ b/.htaccess
@@ -43,8 +43,13 @@ DirectoryIndex index.php
   php_value session.auto_start              0
 </IfModule>
 
-# Reduce the time dynamically generated pages are cache-able.
+# Requires mod_expires to be enabled.
 <IfModule mod_expires.c>
+  # Enable expirations.
+  ExpiresActive On
+  # Cache all files for 2 weeks after access (A).
+  ExpiresDefault A1209600
+  # Do not cache dynamically generated pages.
   ExpiresByType text/html A1
 </IfModule>
 
