--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "sites/all/modules/job_queue"]
 	path = sites/all/modules/job_queue
 	url = git@github.com:Br3nda/drupal-module-job_queue.git
+[submodule "sites/all/modules/vertical_tabs"]
+	path = sites/all/modules/vertical_tabs
+	url = git@github.com:Br3nda/drupal-module-vertical_tabs.git
